--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,47 @@
+
+Skip to content
+Pull requests
+Issues
+Codespaces
+Marketplace
+Explore
+@clanto007
+excalidraw /
+excalidraw
+Public
+
+Fork your own copy of excalidraw/excalidraw
+
+Code
+Issues 870
+Pull requests 149
+Discussions
+Actions
+Projects
+Security
+
+    Insights
+
+Beta Try the new code view
+excalidraw/public/index.html
+@dwelle
+dwelle fix: autoredirect to plus in prod only (#6446)
+Latest commit 372743f Apr 12, 2023
+History
+23 contributors
+@dwelle
+@lipis
+@tomayac
+@ad1992
+@vjeux
+@dependabot-preview
+@maielo
+@jsjoeio
+@j-f1
+@kbariotis
+@voluntadpear
+@giovannigiordano
+248 lines (228 sloc) 7.5 KB
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -246,3 +290,20 @@
     <div id="root"></div>
   </body>
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+
+    Terms
+    Privacy
+    Security
+    Status
+    Docs
+    Contact GitHub
+    Pricing
+    API
+    Training
+    Blog
+    About
+
+excalidraw/index.html at master · excalidraw/excalidraw
