--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,3 @@
-
-Skip to content
-Pull requests
-Issues
-Codespaces
-Marketplace
-Explore
-@clanto007
-excalidraw /
-excalidraw
-Public
-
-Fork your own copy of excalidraw/excalidraw
-
-Code
-Issues 870
-Pull requests 149
-Discussions
-Actions
-Projects
-Security
-
-    Insights
-
-Beta Try the new code view
-excalidraw/public/index.html
-@dwelle
-dwelle fix: autoredirect to plus in prod only (#6446)
-Latest commit 372743f Apr 12, 2023
-History
-23 contributors
-@dwelle
-@lipis
-@tomayac
-@ad1992
-@vjeux
-@dependabot-preview
-@maielo
-@jsjoeio
-@j-f1
-@kbariotis
-@voluntadpear
-@giovannigiordano
-248 lines (228 sloc) 7.5 KB
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -192,7 +148,6 @@ History
       // setting this so that libraries installation reuses this window tab.
       window.name = "_excalidraw";
     </script>
-    <% if (process.env.REACT_APP_DISABLE_TRACKING !== 'true') { %>
 
     <!-- LEGACY GOOGLE ANALYTICS -->
     <% if (process.env.REACT_APP_GOOGLE_ANALYTICS_ID) { %>
@@ -213,8 +168,7 @@ History
 
     <!-- Matomo -->
     <% if (process.env.REACT_APP_MATOMO_URL &&
-    process.env.REACT_APP_MATOMO_SITE_ID &&
-    process.env.REACT_APP_CDN_MATOMO_TRACKER_URL) { %>
+    process.env.REACT_APP_MATOMO_SITE_ID) { %>
     <script>
       var _paq = (window._paq = window._paq || []);
       /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
@@ -228,14 +182,13 @@ History
           g = d.createElement("script"),
           s = d.getElementsByTagName("script")[0];
         g.async = true;
-        g.src = "%REACT_APP_CDN_MATOMO_TRACKER_URL%";
+        g.src = u+'matomo.js';
         s.parentNode.insertBefore(g, s);
       })();
     </script>
     <% } %>
     <!-- end Matomo analytics -->
 
-    <% } %>
 
     <!-- FIXME: remove this when we update CRA (fix SW caching) -->
     <style>
@@ -290,20 +243,3 @@ History
     <div id="root"></div>
   </body>
 </html>
-Footer
-© 2023 GitHub, Inc.
-Footer navigation
-
-    Terms
-    Privacy
-    Security
-    Status
-    Docs
-    Contact GitHub
-    Pricing
-    API
-    Training
-    Blog
-    About
-
-excalidraw/index.html at master · excalidraw/excalidraw
